--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.4",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "save": "^2.9.0",
